@@ -1,5 +1,9 @@
 v2.5.8.2 - Drag and Drop now supports dragging directories to load all that
 	   is found inside them.
+	 - Color Info now displays the gamma/gain'ed image values instead of 
+	   just the original values.
+	 - MultiView images (Stereo) now supports a side-by-side view.
+
 v2.5.8.1 - Bug fixed drag and drop of sequences as it had gotten broken.
 	 - Bug fixed preview pictures which could show wrong colors in movie
 	   files.
